minor formatting changes